--- a/package.json
+++ b/package.json
@@ -11,6 +11,11 @@
   "dependencies": {
     "ejs": "^2.5.7",
     "express": "^4.16.2",
-    "socket.io": "^2.0.4"
+    "socket.io": "^2.0.4",
+
+    "async": "^2.6.0",
+    "aws-sdk": "^2.154.0",
+    "formidable": "^1.1.1",
+    "mysql": "^2.15.0"
   }
 }
